<resources>
    <string name="map_token" translatable="false">AIzaSyDn8B_PBimhiAnCnnFJPk1Zcguh4MOMgz4</string>
    <string name="app_name">DAS Mobile</string>
    <string name="action_settings">Настройки</string>
    <string name="common_next">Следующий</string>
    <string name="common_continue">Продолжить</string>
    <string name="common_enter">Войти</string>
    <string name="common_previous">Предыдущий</string>
    <string name="enter_phone">Введите номер телефона</string>
    <string name="forget_password">Забыли пароль?</string>
    <string name="forget_password_reset_descr">На ваш номер телефона, вам будет отправлено сообщение с паролем.</string>
    <string name="enter_welcome">Добро пожаловать!\n%s</string>
    <string name="enter_password">Введите пароль</string>
    <string name="enter_password_from_sms">Введите пароль из смс</string>
    <string name="enter_password_retry_remaining">Отправить пароль заново через 00:%02d</string>
    <string name="enter_password_retry">Отправить пароль заново</string>
    <string name="welcome_title">Добро пожаловать!</string>
    <string name="enter">Войти</string>
    <string name="password_reset">Восстановление пароля</string>
    <string name="password">Пароль</string>
    <string name="get_started">Понятно</string>
    <string name="skip">Пропустить</string>
    <string name="not_specified">Не указано</string>
    <string name="screen_one_title">DAS Mobile</string>
    <string name="screen_two_title">Наши возможности</string>
    <string name="screen_three_title">Как передать ТМЦ/ТС/ПО?</string>
    <string name="screen_four_title">Как работать зав-складом?</string>
    <string name="screen_five_title">Другие возможности?</string>
    <string name="screen_one_descr">Приложение которое предназначена для упрощение работы</string>
    <string name="screen_two_descr">Передача товарно-материальных ценностей, транспорта и прицепных оборудований путем удобных QR-кодов и без-интернетный доступ для последующих отправки сохраненных передач</string>
    <string name="screen_three_descr">Для передачи товарно-материальных ценностей, транспорта и прицепных оборудований создается QR-код для получателя, для принимающего открывается камера для сканирование QR-кода, все операции упрощены до минимума</string>
    <string name="screen_four_descr">Для роли завсклада, сделано перечень всех возможных номенклатур для передачи и получений, а так же передачи складов</string>
    <string name="screen_five_descr">Приложение позволяет другие возможности, такие как просмотр списков историй передач/получений и редактирование профиля. Все другие возможности будут появляться по мере обновлений</string>
    <string name="common_error_of_server">Ошибка сервера!</string>
    <string name="common_error">Ошибка</string>
    <string name="common_unexpected_error">Неожиданная ошибка</string>
    <string name="common_banner_success">Успешно</string>
    <string name="common_banner_error">Ошибка</string>
    <string name="common_banner_await">В ожидании</string>
    <string name="common_error_no_internet_connection">Нету подключение к интернету!\n Вы уверены что хотите продолжить?</string>
    <string name="common_error_no_connection">Нету подключение к интернету</string>
    <string name="common_error_could_not_connect_to_server">Не удалось подключится к серверу</string>
    <string name="common_no_data">Нет данных</string>
    <string name="image_url">https://app.dasagro.kz%s</string>
    <string name="profile">Профиль</string>
    <string name="log_out">Выйти</string>
    <string name="support">Поддержка</string>
    <string name="history">История</string>
    <string name="home">Главная</string>
    <string name="common_phone_mask">+7</string>
    <string name="change_avatar">Изменить аватар</string>
    <string name="phone_number_title">Номер телефона</string>
    <string name="birth_date_title">Дата рождения</string>
    <string name="iin_title">ИИН</string>
    <string name="name_title">ФИО</string>
    <string name="begin_work">Начать работу</string>
    <string name="navigate_to_qr">Наведите камеру на QR</string>
    <string name="error_type_qr">Не верный формат QR!</string>
    <string name="error_scan">Ошибка сканирование!</string>
    <string name="success_qr_scan">Qr успешно сканирован!</string>
    <string name="enter_pass_info_">Чтобы продолжить введите ваш текущий пароль</string>
    <string name="enter_pass_confirm_info">Пароль должен состоять не менее чем из 6.\n\n В пароле обязательно должны присутствовать цифры от (1 до 9).</string>
    <string name="password_repeat">Повторите пароль</string>
    <string name="new_password">Новый пароль</string>
    <string name="add_media">Добавить фото или видео</string>
    <string name="write_here">Напишите сообщение сюда</string>
    <string name="send">Отправить</string>
    <string name="text_support_info">Если у вас есть какие либо затруднения с приложением, либо вы хотите подсказать какие-то улучшения, мы обязательно выслушаем вас.</string>
    <string name="from_namespace">от %s</string>
    <string name="given_namespace">передан %s</string>
    <string name="to_namespace">кому %s</string>
    <string name="accept">Принять</string>
    <string name="accept_title">Принято</string>
    <string name="given">Передан</string>
    <string name="give_title">Передано</string>
    <string name="error_not_exist">Такого юзера не существует в базе</string>
    <string name="confirm">Подтвердить</string>
    <string name="cancel">Отмена</string>
    <string name="log_out_title">Выйти из приложения</string>
    <string name="attention">Внимание</string>
    <string name="fligel_equal_with_the_last">Вы уверены что хотите продолжить? В течение последних трех операции вы принимали с этого комбайна с таким весом!</string>
    <string name="log_out_desc">Вы уверены что хотите выйти из приложения, все данные будут стерты и не будут доступны для восстановления!</string>
    <string name="accept_inventory">Принять ТМЦ</string>
    <string name="available_operations">Доступные операции</string>
    <string name="await_fligel_data">В ожидании передачи данных Флигеля</string>
    <string name="await_sent_operations">В ожидании передачи ТМЦ</string>
    <string name="await_accepted_operations">В ожидании принятии ТМЦ</string>
    <string name="await_sent_transports">В ожидании передачи ТC</string>
    <string name="await_accepted_transports">В ожидании принятии ТC</string>
    <string name="await_sent_operations_accessory">В ожидании передачи ПО</string>
    <string name="await_accepted_operations_accessory">В ожидании принятии ПО</string>
    <string name="camera_qr_scan_permission_required">Нужно дать разрешение камеры для QR-сканера!</string>
    <string name="camera_qr_scan_permission_required_rationale">Для корректной работы нужно дать разрешение камеры для QR-сканера!</string>
    <string name="camera_access_title">Доступ к камере</string>
    <string name="make_transfer">Сформировать передачу</string>
    <string name="barcode_bottom_text">Внимание! Для Передачи просим нажать на кнопку “Требуется обратное сканирование”</string>
    <string name="barcode_next_bottom_text">Внимание! Для Передачи просим нажать на кнопку “Обратное сканирование”</string>
    <string name="barcode_bottom_text_reverse_scan">Внимание! Для подтверждения передачи просим нажать на кнопку “Готово”</string>
    <string name="ready">Готово</string>
    <string name="need_back_scan">Требуется обратное сканирование</string>
    <string name="back_scan">Обратное сканирование</string>
    <string name="accept_gather">Принять урожай</string>
    <string name="transport_type">Номер комбайна</string>
    <string name="field_number">Номер поля</string>
    <string name="gather_type">Сорт урожая</string>
    <string name="gather_weight">Вес урожая</string>
    <string name="gather_wet">Влажность</string>
    <string name="transfer">Передать</string>
    <string name="naming">Наименование</string>
    <string name="total_quantity">Всего:%s</string>
    <string name="inventory_total_quantity">Количество:</string>
    <string name="total_quantity_formatter">Количество:%.0f</string>
    <string name="total_quantity_string_formatter">Количество: %s</string>
    <string name="inventory_sender_name">От кого: %s</string>
    <string name="inventory_sender_name_from">Кому: %s</string>
    <string name="transfer_inventory">Передать ТМЦ</string>
    <string name="gather_tranfer_title">Заполните данные поля</string>
    <string name="transfer_confirm_title">Вы подтверждаете данную передачу?</string>
    <string name="inventory_accept_confirmed_title">Подтвердите операцию</string>
    <string name="inventory_fligel_data_correct_title">Вы принимаете товар с поля??</string>
    <string name="search">Искать</string>
    <string name="warehouse_title">Название Склада</string>
    <string name="action_list">Список ТС,ПО,ТМЦ</string>
    <string name="action_add_inventory">Принять ТС, ТМЦ, ПО</string>
    <string name="action_transfer_inventory">Передать ТС, ТМЦ, ПО</string>
    <string name="fully_transfer_warehouse">Передать склад полностью</string>
    <string name="transfer_role_title">Выберите кому вы хотите передать склад</string>
    <string name="warehouse_head">Зав. Складу</string>
    <string name="security">Охране</string>
    <string name="transfer_warehouse">Передать Склад</string>
    <string name="warehouse_naming">Наименование склада</string>
    <string name="enter_seal_number">Введите номер пломбы</string>
    <string name="shoot_video">Снять видео</string>
    <string name="error_incorrect_password">Введен неправильный пароль!</string>
    <string name="accept_inventory_concat">Принять %s</string>
    <string name="permission_location_desc">Для корректной работы карты и определение текущего местоположения требуется разрешение на геолокацию!</string>
    <string name="permission_location_title">Разрешение местоположения</string>
    <string name="finish_work">Завершить работу</string>
    <string name="password_change">Изменение пароля</string>
    <string name="password_changed_successfully">Пароль успешно обновлен!</string>
    <string name="inventory_title">ТМЦ</string>
    <string name="warehouse_title_head">Склад</string>
    <string name="transport_tracktor_title">ТС</string>
    <string name="transport_trailer_title">ПО</string>
    <string name="quantity_compare_error">Вносимое значение не должно превышать общего количества</string>
    <string name="quantity_is_empty_error">Введите количество!</string>
    <string name="common_fill_all_inputs">Введите все данные!</string>
    <string name="confirm_with_finger">Подтвердите отпечатком</string>
    <string name="error_not_valid_finger">Неверный отпечаток</string>
    <string name="uploading_files">Отправка файлов…</string>
    <string name="choose_image">Выбрать фото</string>
    <string name="choose_video">Выбрать видео</string>
    <string name="office_inventory_accepted_successfully">ТМЦ успешно принят</string>
    <string name="office_inventory_transferred_successfully">ТМЦ успешно передан</string>
    <string name="transport_inventory_accepted_successfully">ТС успешно принят</string>
    <string name="transport_accessory_inventory_accepted_successfully">ПО успешно принят</string>
    <string name="transport_fligel_data_accepted_successfully">Данные успешно приняты</string>
    <string name="transport_inventory_transferred_successfully">ТС успешно передан</string>
    <string name="transport_accessory_inventory_transferred_successfully">ПО успешно передан</string>
    <string name="transport_inventory_await">Получение ТС в ожидании</string>
    <string name="transport_accessory_inventory_await">Получение ПО в ожидании</string>
    <string name="current_location">Вы здесь</string>
    <string name="common_error_scan">Ошибка считывания!</string>
    <string name="requestID_error_scan">Неправильный ID транзакции!</string>
    <string name="quantity">Количество</string>
</resources>