<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:navigationIcon="@drawable/ic_arrow_back"
        android:background="@color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_password"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="15dp"
        android:layout_marginStart="35dp"
        android:textColor="@color/purple_700"
        android:layout_marginBottom="30dp"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ll_pass"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.DAS"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_pass"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/enter_password"
            android:imeOptions="actionDone"
            android:maxLength="6"
            android:inputType="numberPassword"
            android:padding="6dp"
            android:textSize="14sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ll_pass_confirm"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.DAS"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_pass">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_pass_confirm"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/password_repeat"
            android:imeOptions="actionDone"
            android:inputType="numberPassword"
            android:maxLength="6"
            android:padding="6dp"
            android:textSize="14sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_pass_info"
        style="@style/Widget.MaterialComponents.TextView.DAS"
        android:layout_width="0dp"
        android:gravity="start"
        android:paddingStart="0dp"
        android:paddingEnd="0dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/color_grey_text"
        android:layout_height="wrap_content"
        android:text="@string/enter_pass_confirm_info"
        app:layout_constraintEnd_toEndOf="@+id/ll_pass_confirm"
        app:layout_constraintStart_toStartOf="@+id/ll_pass_confirm"
        app:layout_constraintTop_toBottomOf="@+id/ll_pass_confirm" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_confirm"
        style="@style/Widget.MaterialComponents.Button.DAS"
        android:layout_width="0dp"
        android:layout_marginTop="30dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        android:text="@string/common_continue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_pass_info" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/loginTopGuidline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />

</androidx.constraintlayout.widget.ConstraintLayout>