<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter"
        android:textSize="32sp"
        android:textStyle="bold"
        android:layout_marginStart="35dp"
        android:textColor="@color/purple_700"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toTopOf="@+id/ll_phone"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ll_phone"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.DAS"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/loginTopGuidline">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_phone"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/enter_phone"
            android:imeOptions="actionDone"
            android:inputType="phone"
            android:padding="6dp"
            android:textSize="14sp" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_confirm"
        style="@style/Widget.MaterialComponents.Button.DAS"
        android:layout_width="0dp"
        android:layout_marginTop="30dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        android:text="@string/common_continue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_phone" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forget_password"
        android:layout_marginTop="30dp"
        android:clickable="true"
        android:focusable="true"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:textColor="@color/selectable_text_color_primary"
        app:layout_constraintEnd_toEndOf="@+id/btn_confirm"
        app:layout_constraintStart_toStartOf="@+id/btn_confirm"
        app:layout_constraintTop_toBottomOf="@+id/btn_confirm" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv"
        android:layout_width="52dp"
        android:layout_height="52dp"
        app:cardCornerRadius="26dp"
        app:cardElevation="3dp"
        app:cardBackgroundColor="@color/white"
        android:layout_marginBottom="35dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:src="@drawable/ic_logo_default"
            android:layout_margin="14dp"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/loginTopGuidline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />

</androidx.constraintlayout.widget.ConstraintLayout>